fixed bugs and added req.params instead od query
