# src/routes/admin/users.router.js
@@ -8,8 +8,8 @@ router.route('/createUser').post(verifyAdminJWT, createUser);
 
 router.route('/getUsers').get(verifyAdminJWT, getUsers);
 
-router.route('/updateUser').patch(verifyAdminJWT, updateUser);
+router.route('/updateUser/:empId').patch(verifyAdminJWT, updateUser);
 
-router.route('/deleteUser').delete(verifyAdminJWT, deleteUser);
+router.route('/deleteUser/:empId').delete(verifyAdminJWT, deleteUser);
 
 export default router;
